inserimento paragrafo file html e fine lavoro

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 <body>
 
   <h1>Hello World</h1>
+
+  <p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore sequi, distinctio, nemo consequuntur eaque nulla debitis modi ratione dolor atque, pariatur nihil nesciunt. Beatae quibusdam ut officia enim reiciendis magni!
+  </p>
   
 </body>
 </html>
